--- a/onehundredideasrb/src/main.css
+++ b/onehundredideasrb/src/main.css
@@ -8,6 +8,10 @@ html {
     overflow: hidden;
 }
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 app {
     display: block;
     height: 100%;
